syntax = "proto3";

option csharp_namespace = "FSR.DigitalTwinLayer.GRPC.Lib";

package FSR.DigitalTwinLayer.GRPC.Lib;

/* DT Layer Models */

enum DigitalTwinLayerType {
    DT_LAYER_TYPE_VIRTUAL = 0;
    DT_LAYER_TYPE_PHYSICAL = 1;
}

enum StreamItemType {
    STREAM_ITEM_TYPE_NONE = 0;
    STREAM_ITEM_TYPE_BYTE = 1;
    STREAM_ITEM_TYPE_INT32 = 2;
    STREAM_ITEM_TYPE_FLOAT32 = 3;
}

message StreamItem {
    StreamItemType type = 1;
    bytes payload = 2;
    repeated int32 payloadI32 = 3;
    repeated float payloadF32 = 4;
}